[package]
name = "txoutset"
version = "0.3.0"
authors = ["Clark Moody <clark@clarkmoody.com>"]
repository = "https://github.com/clarkmoody/txoutset"
description = "Parser for the UTXO set dump produced by Bitcoin Core"
keywords = ["bitcoin", "parser", "utxo"]
categories = ["encoding", "cryptography::cryptocurrencies"]
license = "MIT"
edition = "2021"

[dependencies]
bitcoin = { git = "https://github.com/liuchengxu/rust-bitcoin", branch = "0.32.x-subcoin" }
log = "0.4.21"

[workspace]
members = [
    "examples/*"
]
